--- a/src/app/Price/Price.component.html
+++ b/src/app/Price/Price.component.html
@@ -19,16 +19,16 @@
     <h3 class="my-5">Gümüş 1</h3>
     <ul class="mb-5">
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> 1 Aylık Üyelik</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> 1 Aylık Üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Günlük su</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Günlük su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Günlük protein</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Günlük protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
@@ -38,16 +38,16 @@
     <h3 class="my-5">Gümüş 2</h3>
     <ul class="mb-5">
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> 3 Aylık Üyelik</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> 3 Aylık Üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Günlük su</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Günlük su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Günlük protein</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Günlük protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
@@ -57,16 +57,16 @@
     <h3 class="my-5">Gümüş 3</h3>
     <ul class="mb-5">
       <li>
-        <p> <i class="fa-regular fa-circle-check"></i> 6 Aylık Üyelik</p>
+        <p> <i class="fa-regular fa-circle-check ok"></i> 6 Aylık Üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Günlük su</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Günlük su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Günlük protein</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Günlük protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
@@ -79,16 +79,16 @@
     <h3 class="my-5">Altın 1</h3>
     <ul class="mb-5">
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> 6 Aylık Üyelik</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> 6 Aylık Üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Günlük su</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Günlük su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Günlük protein</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Günlük protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
@@ -98,16 +98,16 @@
     <h3 class="my-5">Altın 2</h3>
     <ul class="mb-5">
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> 1 Yıllık Üyelik</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> 1 Yıllık Üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Günlük su</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Günlük su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Günlük protein</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Günlük protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
@@ -117,16 +117,16 @@
     <h3 class="my-5">Altın 3</h3>
     <ul class="mb-5">
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> 2 Yıllık Üyelik</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> 2 Yıllık Üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Günlük su</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Günlük su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Günlük protein</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Günlük protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
@@ -139,19 +139,19 @@
     <h3 class="my-5">Elmas 1</h3>
     <ul class="mb-5">
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> 6 Aylık Üyelik</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> 6 Aylık Üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Sınırsız su</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Sınırsız su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Sınırsız protein</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Sınırsız protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Özel hoca</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Özel hoca</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
@@ -161,19 +161,19 @@
     <h3 class="my-5">Elmas 2</h3>
     <ul class="mb-5">
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> 1 Yıllık üyelik</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> 1 Yıllık üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Sınırsız su</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Sınırsız su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Sınırsız protein</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Sınırsız protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Özel hoca</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Özel hoca</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
@@ -183,19 +183,19 @@
     <h3 class="my-5">Elmas 3</h3>
     <ul class="mb-5">
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> 2 Yıllık Üyelik</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> 2 Yıllık Üyelik</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Sınırsız su</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Sınırsız su</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Sınırsız protein</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Sınırsız protein</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-check"></i> Özel hoca</p>
+        <p><i class="fa-regular fa-circle-check ok"></i> Özel hoca</p>
       </li>
       <li>
-        <p><i class="fa-regular fa-circle-xmark"></i> Öğrenci indirimi</p>
+        <p><i class="fa-regular fa-circle-xmark x"></i> Öğrenci indirimi</p>
       </li>
     </ul>
     <hr class="tl">
