--- a/src/app/Price/Price.component.html
+++ b/src/app/Price/Price.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid position-relative p-3 p-md-5 text-center"
   style="background-image: url('https://i.hizliresim.com/pq36358.png'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-  <div class="container mt-4">
-    <h1 class="display-1 mt-4" id="baslik">Fiyatlandırma Politikamız</h1>
+  <div class="container mt-5">
+    <h1 class="display-1" id="baslik">Fiyatlandırma Politikamız</h1>
     <p class="my-4">Üyelik sistemimiz üç kategoriden ve üçer seviyeden oluşmaktadır.
       <br>
       Öğrenci indiriminden yararlanmak isteyen kişiler almak istediği paketin süresi boyunca öğrenci olarak kalacağını kanıtlamak zorundadır.
