--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <!-- <div class="position-relative p-3 p-md-5 text-center bg-dark"> -->
   <div class="container mt-5">
     <h1 class="display-1">WELCOME TO THE <a style="color: red;">GYM</a></h1>
-    <p style="max-width: 550px;" class="lead mx-auto">Birey, ruhuna zarar veren ve kimseye anlatmak istemediği bir derdi
+    <p style="max-width: 850px;" class="lead mx-auto my-4">Birey, ruhuna zarar veren ve kimseye anlatmak istemediği bir derdi
       olduğunda içine kapanır. Bu içe kapanıklık zamanla yalnızlaşmaya yol açar. Yalnızlaşan birey daha az hareketli bir
       hayat geçirmeye başlar ve bu hareketszlik vücudun görünümünü etkiler. Zaman geçtikçe birey özgüven duygusunu da
       kaybeder kendini hayattan izole eder. Yalnız yaşamakta sıkıntı yok ama erken ölmek istemiyorsan sağlığını korumak
