--- a/src/app/onWork/onWork.component.html
+++ b/src/app/onWork/onWork.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid position-relative p-3 p-md-5 text-center"
   style="background-image: url('https://i.hizliresim.com/2nyv8fb.png'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-  <div class="container mt-4">
+  <div class="container mt-5">
     <h1 class="display-1" id="baslik">Çalışma Şeklimiz</h1>
-    <p class="mt-5 mb-5 mx-auto" style="max-width: 600px;">İlk defa fitness'a başlayacak üyelerimiz sitede belirtilen
+    <p class="mt-4 mb-4 mx-auto" style="max-width: 600px;">İlk defa fitness'a başlayacak üyelerimiz sitede belirtilen
       salon programını bir ay boyunca
       uygulamalıdır.
       Bir ayın sonunda sonunda ister iletişim bölümündeki adreslerden, ister salondaki hocalarımızdan özel program
@@ -19,64 +19,64 @@
     </h2>
     <br>
     <br>
-    <div class="container d-flex row align-items-start">
+    <div class="container d-flex row mx-auto">
       <!-- --------------------------------------------------------------------- -->
-      <div class="text center col">
+      <div class="text-center col">
         <h3>Esneme ve Koşu Bandı</h3>
         <div></div>
         <h4>15 dakika</h4>
         <hr>
       </div>
       <!-- --------------------------------------------------------------------- -->
-      <div class="text center col">
+      <div class="text-center col">
         <h3>Chest Press</h3>
         <div></div>
         <h4>3 x (10,10,8)</h4>
         <hr>
       </div>
     </div>
-    <div class="container d-flex row align-items-start my-auto">
+    <div class="container d-flex row mx-auto">
       <!-- --------------------------------------------------------------------- -->
-      <div class="container text center col">
+      <div class="container text-center col">
         <h3>İncline Machine Press</h3>
         <div></div>
         <h4>3 x (10,10,8)</h4>
         <hr>
       </div>
       <!-- --------------------------------------------------------------------- -->
-      <div class="container text center col">
+      <div class="container text-center col">
         <h3>Machine Fly</h3>
         <div></div>
         <h4>3 x (10,10,10)</h4>
         <hr>
       </div>
     </div>
-    <div class="container d-flex row align-items-start my-auto">
+    <div class="container d-flex row mx-auto">
       <!-- --------------------------------------------------------------------- -->
-      <div class="container text center col">
+      <div class="container text-center col">
         <h3>Şınav</h3>
         <div></div>
         <h4>3 x (Maks)</h4>
         <hr>
       </div>
       <!-- --------------------------------------------------------------------- -->
-      <div class="container text center col">
+      <div class="container text-center col">
         <h3>Tricep Pushdown</h3>
         <div></div>
         <h4>4 x (12,10,10,8)</h4>
         <hr>
       </div>
     </div>
-    <div class="container d-flex row align-items-start my-auto mb-5">
+    <div class="container d-flex row mx-auto mb-5">
       <!-- --------------------------------------------------------------------- -->
-      <div class="container text center col">
+      <div class="container text-center col">
         <h3>Rope Pushdown</h3>
         <div></div>
         <h4>3 x (8,10,12)</h4>
         <hr>
       </div>
       <!-- --------------------------------------------------------------------- -->
-      <div class="container text center col">
+      <div class="container text-center col">
         <h3>Bench Dips</h3>
         <div></div>
         <h4>3 x (10,10,10)</h4>
